# LHCb

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CONTRIBUTING.md
Associators/AssociatorsBase/: CMakeLists.txt
Associators/AssociatorsBase/Associators/: Associators.h  InputLinks.h  Linker.h  Location.h  OutputLinks.h
Associators/MCAssociators/: CMakeLists.txt
Associators/MCAssociators/Kernel/: MCAssociation.h  Particle2MCLinker.h  Particle2MCLinker.icpp  Particle2MCMethod.h
Associators/MCAssociators/cmt/: version.cmt
Associators/MCAssociators/dict/: MCAssociatorsDict.h  MCAssociatorsDict.xml
Calo/CaloInterfaces/: CMakeLists.txt
Calo/CaloInterfaces/CaloInterfaces/: ICalo2Calo.h  ICalo2MCTool.h  ICaloClusterSelector.h  ICaloClusterTool.h  ICaloClusterization.h  ICaloCorrection.h  ICaloCosmicsTool.h  ICaloCosmicsTrackTool.h  ICaloDigitTool.h  ICaloDigits4Track.h  ICaloGetterTool.h  ICaloHypo2Calo.h  ICaloHypoEstimator.h  ICaloHypoLikelihood.h  ICaloHypoTool.h  ICaloLikelihood.h  ICaloRelationsGetter.h  ICaloShowerOverlapTool.h  ICaloSplitTool.h  ICaloSubClusterTag.h  ICaloTrackIdEval.h  ICaloTrackMatch.h  ICounterLevel.h  IGammaPi0SeparationTool.h  IL0Calo2Calo.h  INeutralIDTool.h  IPart2Calo.h  ITrack2Calo.h
Calo/CaloInterfaces/cmt/: requirements  version.cmt
Calo/CaloInterfaces/dict/: CaloInterfacesDict.h  CaloInterfacesDict.xml
Calo/CaloInterfaces/doc/: release.notes
Calo/CaloUtils/: CMakeLists.txt
Calo/CaloUtils/CaloUtils/: Calo2Dview.h  Calo2MC.h  Calo2Track.h  CaloAlgUtils.h  CaloCellIDAsProperty.h  CaloData.h  CaloDataFunctor.h  CaloMCTools.h  CaloMCTools1.h  CaloMomentum.h  CaloNeighbours.h  CaloParticle.h  CaloUtils.h  CellMatrix.h  CellMatrix2x2.h  CellMatrix3x3.h  CellNeighbour.h  CellSelector.h  CellSwissCross.h  ClusterFunctors.h  CovarianceEstimator.h  Digit2ClustersConnector.h  ICaloElectron.h  Kinematics.h  SharedCells.h  SpreadEstimator.h
Calo/CaloUtils/cmt/: version.cmt
Calo/CaloUtils/dict/: CaloUtils.xml  CaloUtilsDict.h
Calo/CaloUtils/doc/: release.notes
Calo/CaloUtils/src/: Calo2Dview.cpp  CaloAlgUtils.cpp  CaloCellIDAsProperty.cpp  CaloMomentum.cpp  CaloNeighbours.cpp  CaloParticle.cpp  CaloUtils.cpp  CellMatrix.cpp  CellMatrix2x2.cpp  CellMatrix3x3.cpp  CellNeighbour.cpp  CellSelector.cpp  CellSwissCross.cpp  ClusterFunctors.cpp  CovarianceEstimator.cpp  Digit2ClustersConnector.cpp  Kinematics.cpp  SpreadEstimator.cpp
CaloFuture/CaloFutureDAQ/: CMakeLists.txt
CaloFuture/CaloFutureDAQ/CaloFutureDAQ/: ICaloFutureDataProvider.h  ICaloFutureDigitFilterTool.h  ICaloFutureEnergyFromRaw.h  ICaloFutureL0DataProvider.h  ICaloFutureReadoutTool.h  ICaloFutureTriggerAdcsFromRaw.h  ICaloFutureTriggerBitsFromRaw.h
CaloFuture/CaloFutureDAQ/dict/: CaloFutureDAQDict.h  CaloFutureDAQDict.xml
CaloFuture/CaloFutureDAQ/doc/: release.notes
CaloFuture/CaloFutureDAQ/options/: CaloFutureBankHandler.opts  CaloFutureBankHandlerConversion.opts  CaloFutureBanksBack2Online.opts  CaloFutureDigitsOnDemand.opts  CaloFutureDigitsSeq.opts
CaloFuture/CaloFutureDAQ/src/: CaloFutureAdcFromRaw.cpp  CaloFutureAdcFromRaw.h  CaloFutureDataProvider.cpp  CaloFutureDataProvider.h  CaloFutureDataProviderFromTES.cpp  CaloFutureDataProviderFromTES.h  CaloFutureDigitFilterAlg.cpp  CaloFutureDigitFilterAlg.h  CaloFutureDigitFilterTool.cpp  CaloFutureDigitFilterTool.h  CaloFutureDigitsFromRaw.cpp  CaloFutureDigitsFromRaw.h  CaloFutureEnergyFromRaw.cpp  CaloFutureEnergyFromRaw.h  CaloFutureFillPrsSpdRawBuffer.cpp  CaloFutureFillPrsSpdRawBuffer.h  CaloFutureFillRawBuffer.cpp  CaloFutureFillRawBuffer.h  CaloFutureL0DataProvider.cpp  CaloFutureL0DataProvider.h  CaloFutureMergeTAE.cpp  CaloFutureMergeTAE.h  CaloFutureRawToDigits.cpp  CaloFutureRawToDigits.h  CaloFutureReadoutTool.cpp  CaloFutureReadoutTool.h  CaloFutureTriggerAdcsFromRaw.cpp  CaloFutureTriggerAdcsFromRaw.h  CaloFutureTriggerAdcsFromRawAlg.cpp  CaloFutureTriggerAdcsFromRawAlg.h  CaloFutureTriggerBitsFromRaw.cpp  CaloFutureTriggerBitsFromRaw.h  CaloFutureTriggerBitsFromRawAlg.cpp  CaloFutureTriggerBitsFromRawAlg.h  CaloFutureZSupAlg.cpp  CaloFutureZSupAlg.h  CheckCaloFutureBank.cpp  CheckCaloFutureBank.h  CompareCaloFutureDigits.cpp  CompareCaloFutureDigits.h  (+2 more)
CaloFuture/CaloFutureInterfaces/: CMakeLists.txt
CaloFuture/CaloFutureInterfaces/CaloFutureInterfaces/: CaloFutureMatch2D.h  CaloFutureMatch3D.h  Enums.h  ICaloFuture2CaloFuture.h  ICaloFuture2MCTool.h  ICaloFutureClusterSelector.h  (+26 more)
CaloFuture/CaloFutureUtils/: CMakeLists.txt
DAQ/DAQKernel/: .project  CMakeLists.txt
DAQ/DAQUtils/: CMakeLists.txt
DAQ/MDF/: CMakeLists.txt
DAQ/MDF_ROOT/: CMakeLists.txt
Det/BcmDet/: CMakeLists.txt
Det/CaloDet/: CMakeLists.txt
Det/CaloDetXmlCnv/: CMakeLists.txt
Det/DDDB/: CMakeLists.txt
Det/DetCond/: CMakeLists.txt
Det/DetDesc/: CMakeLists.txt
Det/DetDescChecks/: CMakeLists.txt
Det/DetDescCnv/: CMakeLists.txt
Det/DetDescSvc/: CMakeLists.txt
Det/FTDet/: CMakeLists.txt
Det/Magnet/: CMakeLists.txt
Det/MuonDet/: CMakeLists.txt
Det/OTDet/: CMakeLists.txt
Det/RichDet/: CMakeLists.txt
Det/STDet/: CMakeLists.txt
Det/UTDet/: CMakeLists.txt
GaudiGSL/: CMakeLists.txt
GaudiGSL/GaudiGSL/: GaudiGSL.h  GslError.h  GslErrorHandlers.h  IEqSolver.h  IFuncMinimum.h  IGslErrorHandler.h  IGslSvc.h
GaudiGSL/GaudiMath/: Adapters.h  Constant.h  FunAdapters.h  GSLFunAdapters.h  GaudiMath.h  IndefiniteIntegral.h  Integral.h  Integration.h  Interpolation.h  NumericalDefiniteIntegral.h  NumericalDerivative.h  NumericalIndefiniteIntegral.h  Splines.h
GaudiGSL/dict/: GaudiGSLMath.h  GaudiGSLMath.xml
GaudiObjDesc/: CMakeLists.txt
GaudiObjDesc/GaudiObjDesc/: MemoryPoolAllocatorReleaser.h
GaudiObjDesc/cmake/: GaudiObjDesc.cmake  god_generate_deps.py
GaudiObjDesc/cmt/: version.cmt
GaudiObjDesc/doc/: release.notes
GaudiObjDesc/scripts/: godII.py
GaudiObjDesc/src/: MemoryPoolAllocatorReleaser.cpp
GaudiObjDesc/templates/: classInNS.tpl  header.tpl  namespace.tpl
GaudiObjDesc/tests/: TestModel.xml  test_GOD_basics.py
GaudiObjDesc/xml_files/: gdd.dtd
(+5195 files in other folders)
